<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/edtNome"
            android:hint="@string/hint_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:inputType="textCapWords"
            android:autofillHints="name"/>

        <Spinner
            android:id="@+id/spnTipo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/edtDescricao"
            android:hint="@string/hint_descricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:inputType="textMultiLine"
            android:autofillHints="off"/>

        <EditText
            android:id="@+id/edtInicio"
            android:hint="@string/hint_inicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:inputType="time"
            android:autofillHints="off"/>

        <EditText
            android:id="@+id/edtFim"
            android:hint="@string/hint_fim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:inputType="time"
            android:autofillHints="off"/>

        <Button
            android:id="@+id/btnIniciar"
            android:text="@string/btn_iniciar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/btnLista"
            android:text="@string/btn_lista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

</ScrollView>